# robbie-g2

./: .gitignore  CONTRIBUTING.md  Dockerfile  LICENSE  README.md  agent.yaml  pyproject.toml
robbieg2/: agent.py  canny_composite.py  cheap_critic.py  clicker.py  easyocr.py  grid.py  img.py  server.py  tool.py
