
[tool.poetry]
name = "RobbieG2"
version = "0.1.0"
description = "A Gen 2 AI Agent that uses OCR, Canny Composite, and Grid to navigate GUIs."
authors = ["Kentauros AI <partnerships@kentauros.ai>"]
license = "MIT"
readme = "README.md"
packages = [{include = "robbieg2"}]


[tool.poetry.dependencies]
python = "^3.10"
pydantic = "^2.6.3"
opencv-python = "^4.10.0.84"
numpy = "^1.26.4"
scikit-learn = "^1.5.0"
easyocr = "^1.7.1"
torch = { version = "2.2.2", source = "pypi" }
pillow = "^10.3.0"
surfkit = "^0.1.236"


[tool.poetry.group.dev.dependencies]
flake8 = "^7.0.0"
black = "^24.2.0"
pytest = "^8.0.2"
ipykernel = "^6.29.3"
pytest-env = "^1.1.3"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
